# insider-wallet-snuffy-bot

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/models/: chains.py  days_options.py
src/scraper/: dexscreener_tokens_scraper.py  dexscreener_traders_scraper.py  wallet_portfolio_scraper.py
src/utils/: naming_convention.py  parsers.py  scraper.py  url.py
